add_library(
	model_backed_simulation
	model_backed_simulation.cc
)
target_include_directories(
	model_backed_simulation
	PUBLIC
	"${PROJECT_SOURCE_DIR}/src/execution/model_backed_simulation"
)
target_include_directories(
	model_backed_simulation
	PRIVATE
	"${PROJECT_SOURCE_DIR}/src/execution"
	"${PROJECT_SOURCE_DIR}/src/model"
)